argo/apps/ntfy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-deployment
  labels:
    app: ntfy-deployment
  annotations:
    components.nora/nginx-proxy: enabled
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: ntfy-pod
  template:
    metadata:
      labels:
        app: ntfy-pod
    spec:
      containers:
        - name: ntfy 
          image: binwiederhier/ntfy:v2.27.0
          args: ["serve"]
          ports: 
            - containerPort: 80
              name: http-ntfy
          resources:
            limits:
              memory: 300Mi
              cpu:  200m
            requests:
                  cpu: 150m
                  memory: 150Mi
          volumeMounts:
              - mountPath: /etc/ntfy
                subPath: server.yml
                name: config-volume
              - mountPath: /var/cache/ntfy
                name: cache-volume
              - mountPath: /var/lib/ntfy
                name: db-volume
        # - name: nginx
        #   image: nginx:stable-alpine
        #   imagePullPolicy: IfNotPresent
        #   ports:
        #     - containerPort: 8080
        #       name: http-nginx
        #   volumeMounts:
        #     - name: nginx-config-volume
        #       mountPath: /etc/nginx/conf.d/default.conf
        #       subPath: default.conf
      volumes:
        - name: config-volume
          configMap:
            name: server-config
        - name: cache-volume
          persistentVolumeClaim:
            claimName: ntfy-pvc
        - name: db-volume
          persistentVolumeClaim:
            claimName: ntfy-db-pvc
        # - name: nginx-config-volume
        #   configMap:
        #     name: nginx-config
