argo/apps/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-svc
  annotations:
    components.nora/nginx-proxy: enabled
spec:
  type: ClusterIP
  selector:
    app: ntfy-pod
  ports:
    - name: http-ntfy-out
      protocol: TCP
      port: 80
      targetPort:  http-ntfy
    # - name: http-ntfy-nginx
    #   protocol: TCP
    #   port: 8080
    #   targetPort:  http-nginx
